# ClawdShield

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.docker/: docker-compose.yaml
apps/api/: alembic.ini  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/app/api/v1/: router.py  runs.py  scenario.py
apps/api/app/core/: agent.py  config.py  middlewares.py  sandbox_runner.py  tools.py
apps/api/app/db/: client.py
apps/api/app/db/models/: __init__.py  event.py  run.py  scenario.py
apps/api/app/schemas/: run.py  scenario.py
apps/api/app/services/attacks/: loader.py
apps/api/app/services/attacks/scenarios/: context-poison-001.yaml  credential-exfil-001.yaml  email-redirect-001.yaml  file-inject-001.yaml  indirect-exfil-001.yaml  role-override-001.yaml  shell-inject-001.yaml  toolchain-escalation-001.yaml
apps/frontend/: package.json
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/api/: client.ts
apps/frontend/src/components/layout/: Shell.tsx  Sidebar.tsx
apps/frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Modal.tsx  Spinner.tsx  StatusDot.tsx
apps/frontend/src/hooks/: useRunStream.ts  useRuns.ts  useScenarios.ts
apps/frontend/src/pages/policy/: PolicyPage.tsx
apps/frontend/src/pages/scenarios/: NewScenarioModal.tsx  ScenarioCard.tsx  ScenariosPage.tsx
apps/frontend/src/pages/simulate/: AgentMessageRow.tsx  LiveFeed.tsx  RunResult.tsx  SimulatePage.tsx  SimulatorControls.tsx  (+1 more)
apps/frontend/src/types/: index.ts
