[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.49.0",
    "fastapi>=0.135.3",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.3.0",
    "langgraph-prebuilt>=0.3.0",
    "openai>=1.70.0",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]
